[project]
name = "podcast-listening-time"
version = "0.1.0"
description = "Kaggle competition https://www.kaggle.com/competitions/playground-series-s5e4/overview"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.0"
jupyter = "^1.1.1"
jupyterlab-lsp = "^5.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
